style.css
@font-face {
    font-family: myCalibriLight;
    src: url("./font/Calibri-Light.woff");
}

/* --------------------------------------------------- */

#link-home {
    color: black;
    text-decoration: none;
    text-align: left;
}

body {
    /* height: 100vh; THIS PREVENTED canvas-nest from working in whole site*/
    background-image: url("./images/3b1b-large-center.webp");
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    font-family: "myCalibriLight", "Calibri Light", "Calibri", "sans-serif";
    font-size: 18px;

    a {
        text-decoration: none;
        color: black;
    }
}

header {
    /* font-size: medium; */
    line-height: 18px;
    padding-left: 10px;
    margin: 10px;
    /* THE FOLLOWING CODE SAVED MY DAY */
    position: sticky;
    top: 10px;
    z-index: 999;
    border: 1px solid black;
    border-radius: 15px;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);

    /* transform: translateX(2vw); this made the width of the page beyond mu screen width */

    .fa-solid.fa-arrow-up-right-from-square.fa-2xs {
        font-size: small;
    }

    button {
        background-color: rgba(255, 165, 165, 0.336);
        border: 1px solid rgba(72, 18, 18, 0.52);
        border-radius: 15px;
        margin-bottom: 5px;
    }

    button:hover {
        background-color: rgba(185, 118, 118, 0.336);
        border: 1px solid black;
    }
}

#content-body {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}

main {
    /* color: black; */
    visibility: visible;
    backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px);
    border: 1px solid black;
    border-radius: 15px;
    /*padding: 6px; // this padding created issue in mobile view*/
    /* width: 60vw; */
    width: 60%;
    justify-content: center;
    /* align-items: center; Kajer na */
    position: relative;
    left: 22%;
}

#main_ {
    padding: 8px;
}

#main_ ul li a {
    color: black;
    text-decoration: none;
    line-height: 2;
}

@media screen and (max-width: 1080px) {
    #aside_bar {
        visibility: hidden;
    }

    header button {
        visibility: visible;
    }

    #main_ {
        visibility: visible;
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        justify-content: center;
        width: 100%;
        left: 0;
    }

    #Short-Myself-and-About-Me {
        width: 100%;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: flex-start;
    }

    #Short-Myself {
        /* width: 100%; */
        /* width: 40vw; */
        justify-content: space-evenly;
    }

    #About-Me {
        /* width: 100vw; */
        /* position: sticky;  */
        width: 100%;
        max-width: 100%;
        /* this 100% of the prev 60% */
        /* border: #008b00 dashed 5px; */
    }

    #Showcase {
        width: 100%;
        /* border: 2px solid black; */
        display: table-row;
        /*flex-wrap: wrap;*/
        justify-content: center;

        img {
            width: 100%;
        }
    }
}

::-moz-selection {
    /* Code for Firefox */
    color: white;
    background: rgba(0, 0, 0, 0.521);
}

::selection {
    color: white;
    background: rgba(0, 0, 0, 0.521);
}

#content-body {
    /* border: 1px solid blue; */
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    /* justify-content: center; */
}

#aside_bar {
    /* background-color: rgba(255, 255, 255, 0.2); */
    /* filter: blur(6px); */
    /* position: fixed; */
    height: fit-content;
    width: 20vw;
    min-width: 160px;
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(4px);
    padding-right: 10px;
    padding-left: 5px;
    padding-bottom: 5px;
    border: 1px solid black;
    border-radius: 15px;

    position: fixed;
    /* position: sticky; */
    top: 160px;
    /*it was -20, changed to 160px*/
    z-index: 999;
}

#h1Shortcuts {
    transform: translateX(5px);
}

#aside_bar a {
    color: black;
    text-align: center;
    display: block;
    border-radius: 15px;
    text-decoration: none;
    width: 100%;
    padding: 5px 0;
    margin: 3px;
    background-color: rgba(255, 165, 165, 0.336);
    border: 1px solid rgba(72, 18, 18, 0.52);
}

#aside_bar a:hover {
    background-color: rgba(185, 118, 118, 0.336);
    border: 1px solid black;
}

#Short-Myself-and-About-Me {
    /* border: 2px dashed orangered; */
    display: flex;
    /* flex-wrap: wrap; THIS CULPRIT SOLVED THAT that THAT ISSUE */
    /* justify-content: row; */
    justify-content: space-evenly;
}

#Short-Myself {
    /* border: 1px green solid; */
    text-align: center;
    display: block;
    height: auto;
    /* min-width: fit-content; */
    min-width: 300px;
    /* max-width: 20vw; */
    max-width: 20%;
    left: 0;

    img {
        justify-content: center;
        text-align: center;
        width: 95%;
        border: 3px solid black;
        border-radius: 40px;
        margin: 5px;
        display: inline-block;
    }

    div {
        padding-bottom: 5px;

        a {
            color: black;
            line-height: 4vh;
            margin: 4px;
            padding: 5px;

            .fa-regular.fa-envelope.fa-xl:hover {
                color: brown;
            }

            .fa-solid.fa-graduation-cap.fa-xl:hover {
                color: #e95f54;
            }

            .fa-brands.fa-linkedin.fa-xl:hover {
                color: #126bc4;
            }

            .fa-brands.fa-square-twitter.fa-xl:hover {
                color: #249ef0;
            }

            .fa-brands.fa-whatsapp.fa-xl:hover {
                color: #2cd46b;
            }

            .fa-brands.fa-telegram.fa-xl:hover {
                color: #30aded;
            }
        }
    }
}

.Short-Myself-icons {
    padding-bottom: 5px;

    a {
        color: black;
        line-height: 4vh;
        margin: 4px;
        padding: 5px;

        .fa-regular.fa-envelope.fa-xl:hover {
            color: brown;
        }

        .fa-solid.fa-graduation-cap.fa-xl:hover {
            color: #e95f54;
        }

        .fa-brands.fa-linkedin.fa-xl:hover {
            color: #126bc4;
        }

        .fa-brands.fa-square-twitter.fa-xl:hover {
            color: #249ef0;
        }

        .fa-brands.fa-whatsapp.fa-xl:hover {
            color: #2cd46b;
        }

        .fa-brands.fa-telegram.fa-xl:hover {
            color: #30aded;
        }
    }
}

#About-Me {
    /* border: 2px dotted rgb(255, 52, 86); */
    display: flex;
    flex-wrap: wrap;
    margin-left: 10px;
    margin-right: 10px;
    height: auto;
    /* max-width: 70%; */
    /* width: 50%; */

    #mini-interest-and-education {
        /* border: 1px red solid; */
        font-size: medium;
        display: flex;
        flex-wrap: wrap;
        justify-content: left;

        #mini-interest {
            /* border: 3px solid black; */
            /* width:fit-content; */
            padding: 5px;
        }

        #mini-education {
            /* border: 3px solid black; */
            padding: 5px;

            a {
                color: black;
                text-decoration: none;
            }
        }
    }
}

.showcase {
    /* my projects */
    /*display: flex;*/
    color: black;
    width: 98%;
    height: fit-content;
    border-radius: 15px;
    /*margin-bottom: 50px ;*/
    border: black solid 1px;
    background-color: rgba(255, 165, 165, 0.336);
    margin: 10px auto;
    /* auto solved the issue ; Center the .showcase element within the parent (optional) */
    /* max-height: 10em; Photo thik position e thik ache */
    /* max-height: 20em; */

    img {
        width: 100%;
        height: 100% !important;
        /*height: 10em;*/
        border-radius: 15px;
        /*border: green 1px solid;*/
    }

    .showcase_text {
        height: fit-content;
        margin-left: 3px;
    }

    .showcase_img {
        height: 20px;
    }

    h3 {
        padding: 6px;
    }

    p {
        padding: 6px;
    }
}

.showcase:hover {
    /*background-color: rgba(172, 113, 113, 0.33);*/
    transform: scale(1.01);
}

#Other-Contents {
    padding: 5px;
}

.hundredPercentWidth {
    width: 100%;
}

footer {
    text-align: center;
    font-size: small;
    /* margin: 10px; */
    padding-bottom: 1px;
    /* position: static; */
    bottom: 0;
}

/* --------------------------------------------------- */

/* FLOATING */

#telegram_button {
    display: block;
    position: fixed;
    /* background-color: white; */
    /* #32a9df */
    left: 5px;
    bottom: 5px;
    z-index: 999;
}

#telegram_button :hover {
    transform: scale(1.1);
}

#telegram_button img {
    height: 50px;
}

#ShowBG {
    background-color: rgba(255, 165, 165, 0.336);
    border: 1px solid rgba(255, 165, 165, 0.336);
    border-radius: 15px;
    margin-bottom: 5px;
    width: 30px;
    height: 30px;
    position: fixed;
    right: 10px;
    bottom: 10px;
    z-index: 999;
}

#ShowBG:hover {
    background-color: rgba(185, 118, 118, 0.336);
    border: 1px solid black;
}

